# emoji-keyboard-gjs

./: Makefile.am  autogen.sh  com.evanwelsh.EmojiKeyboard.spec  configure.ac  emoji-keyboard.doap  emoji.json  packs.json
data/: Makefile.am  app-menu.ui  com.evanwelsh.EmojiKeyboard.appdata.xml.in  com.evanwelsh.EmojiKeyboard.busname  com.evanwelsh.EmojiKeyboard.data.gresource.xml  com.evanwelsh.EmojiKeyboard.desktop.in  com.evanwelsh.EmojiKeyboard.gschema.xml  com.evanwelsh.EmojiKeyboard.service.in  emoji.min.json  main.ui  prefs.ui
data/icons/: Makefile.am
po/: POTFILES.in  it.po
sets/: food.emoji.json  nature.emoji.json  objects.emoji.json  smileys.emoji.json  travel.emoji.json
src/: Makefile.am  com.evanwelsh.EmojiKeyboard.in  com.evanwelsh.EmojiKeyboard.src.gresource.xml  emoji-keyboard.in  emoji.js  emoji_dict.js  emoji_set.js  key.js  keyboard.js  main.js  provider.js  window.js
